# python-project-50

./: .coverage  .flake8  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: Diff_test.yml  PyCi.yml  gendiff_test.yml
gendiff/: __init__.py  cli.py  diff.py  generate_diff.py  parser_file.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/json_files/: file1.json  file2.json
gendiff/scripts/: cli.py  diff.py  gendiff.py  parser_file.py
tests/: __init__.py  test_generate_diff.py
tests/fixtures/: expected_for_json.txt
